--- a/proyecto-personal/Home.html
+++ b/proyecto-personal/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../proyecto-personal/styles.css">
     <title>Pagina de inicio</title>
 </head>
 
@@ -11,12 +12,15 @@
 
     <h1>Bienvenido a mis proyectos</h1>
 
-    <img src="../multimedia/5-mejores-blogs-de-programacion-1170x760.jpg" alt="programandor"  height="500"></br>
+    <img src="../proyecto-personal/multimedia/5-mejores-blogs-de-programacion-1170x760.jpg" alt="programandor"  height="500"></br>
     
+    <blockquote> Esta pagina esta hecha para que gente como tu que busca nuevos talentos de la programacion,
+        encuentra a uno de ellos, que por el momento esta en formacion pero, poco a poco veras como ire evolucionand y mejorando mis habilidades.
+        asi que atento a los proximos meses porque ire mostrando como va mi evolucion es este mundo.</blockquote><br>
 
-    <a href="../proyecto-personal/Portfolio.html"> Ver a Portfolio</a>
+    <a href="../proyecto-personal/Portfolio.html"> Ver Portfolio</a>
     <a href="../proyecto-personal/About.html"> Ir a About</a>
-    <a href="../proyecto-personal/Contact.html"> ir a Contactos</a>
+    <a href="../proyecto-personal/Contact.html">Contactos</a>
 
 
     
